# nitta

./: .dockerignore  .drone.yml  .gitignore  .hlint.yaml  .markdownlint.yaml  .stylish-haskell.yaml  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  README.ru.md  fourmolu.yaml  hie.yaml  nitta.cabal  package.yaml  pyproject.toml  requirements-dev.txt  stack.yaml  weeder.dhall  weeder.toml
.github/workflows/: ci-test.yml  ci.yml  haskell-sanity.yml  ml-with-releases.yml  notify.yml  ui-sanity.yml
app/: APIGen.hs  DE0nano.md  FibonacciDemo.hs  Main.hs  README.md  RaspberryPi3.md  TeacupDemo.hs  imp001.md  testbench_DE0nano_imp001.md  testbench_DE0nano_imp001_en.md
doc/: abbreviation.md  build.md  hdl-install.md  make.md  rules.md  sourcetree-install.md  stack-install.md  vscode-install.md  why-haskell.md
evaluation/: evaluation_230718_154137.csv
examples/: README.md  acc.lua  compileTimeEvaluation.lua  constantFolding.lua  counter.lua  cte.lua  div.lua  double_receive.lua  fail.lua  fibonacci.lua  fixme.lua  fixme1.lua  hares_population.xmile  logicFunc.lua  microarch.toml  microarch.yml  mul.lua  mulsum.lua  mux.lua  pid.lua  self-send.lua  self-send2.lua  shift.lua  sin_ident.lua  spi1.lua  spi2.lua  spi3.lua  sum.lua  sum_test.lua  teacup.lua  test4.lua
examples/sin_ident/: README.md  go.mod  main.go  sin_ident.lua
haddock/nitta/: NITTA-Frontends-Common.html  NITTA-Frontends-Lua.html  NITTA-Frontends-XMILE-DocumentParser.html  NITTA-Frontends-XMILE-Frontend.html  NITTA-Frontends-XMILE-MathParser.html  NITTA-Frontends.html  NITTA-Intermediate-Analysis.html  NITTA-Intermediate-DataFlow.html  NITTA-Intermediate-Functions-Accum.html  NITTA-Intermediate-Functions.html  NITTA-Intermediate-Simulation.html  NITTA-Intermediate-Types.html  NITTA-Intermediate-Value.html  NITTA-Intermediate-Variable.html  NITTA-LuaFrontend.html  NITTA-Model-Microarchitecture-Builder.html  NITTA-Model-Microarchitecture-Config.html  NITTA-Model-Microarchitecture-Types.html  NITTA-Model-Microarchitecture.html  NITTA-Model-Networks-Bus.html  NITTA-Model-Networks-Types.html  NITTA-Model-Problems-Allocation.html  NITTA-Model-Problems-Bind.html  NITTA-Model-Problems-Dataflow.html  NITTA-Model-Problems-Endpoint.html  NITTA-Model-Problems-Refactor-BreakLoop.html  NITTA-Model-Problems-Refactor-ConstantFolding.html  NITTA-Model-Problems-Refactor-OptimizeAccum.html  NITTA-Model-Problems-Refactor-OptimizeLogicalUnit.html  NITTA-Model-Problems-Refactor-ResolveDeadlock.html  NITTA-Model-Problems-Refactor.html  NITTA-Model-Problems-ViewHelper.html  NITTA-Model-Problems.html  NITTA-Model-ProcessIntegrity.html  NITTA-Model-ProcessorUnits-Accum.html  NITTA-Model-ProcessorUnits-Broken.html  NITTA-Model-ProcessorUnits-Comparator.html  NITTA-Model-ProcessorUnits-Divider.html  NITTA-Model-ProcessorUnits-Fram.html  (+86 more)
hdl/: .gitignore  Makefile  README.md  dpu_fram.tb.v  dpu_fram_tb.v  dpu_fram_tb_process.v  float_accum.v  fram_net_tb.v  fram_net_tb_process.v  makefile  net_tb.v  pu_accum.qpf  pu_accum.qsf  pu_accum.v  pu_accum_tb.v  pu_broken.v  pu_compare.v  pu_compare_tb.v  pu_control.v  pu_control_tb.v  pu_fifo.v  pu_fifo_tb.v  pu_fram.v  pu_fram_tb.v  pu_logical_unit.v  pu_lut.v  pu_lut_tb.v  pu_multiplexer.v  pu_multiplexer_tb.v  pu_mux.v  pu_mux_tb.v  pu_shift.v  pu_shift_tb.v  pu_simple_control.v  test  testbenchs.sh
hdl/accum/: Makefile  (+2 more)
hpc/: all.tix  custom.tix  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
ml/: README.md
ml/synthesis/: .gitignore  Dockerfile  README.md  docker-entrypoint-dev.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  vulture_whitelist.txt
ml/synthesis/src/: consts.py
ml/synthesis/src/components/common/: customized_pydantic_model.py  data_loading.py  logging.py  ml_backend_running.py  model_loading.py  nitta_node.py  port_management.py  saving.py  utils.py
ml/synthesis/src/components/data_crawling/: __init__.py  data_crawling.py  example_running.py  leaf_metrics_collector.py  nitta_node.py  nitta_running.py  node_label_computation.py  node_processing.py  sampling_processing.py  tree_operations.py  tree_processing.py  tree_retrieving.py  tree_sampling.py  tree_sampling_coverage_estimation.py
ml/synthesis/src/components/data_crawling/nitta/: nitta_running.py  tree_retrieving.py
ml/synthesis/src/components/data_crawling/node/: node_converting.py  node_label_computation.py
ml/synthesis/src/components/data_crawling/tree_sampling/: backpropagation.py  coverage_estimation.py  result_processing.py  tree_sampling.py
ml/synthesis/src/components/data_processing/: dataset_creation.py  feature_engineering.py
ml/synthesis/src/components/evaluation/: rating.py
ml/synthesis/src/components/model_generation/: model_metainfo.py  models.py  training.py
ml/synthesis/src/components/utils/: asyncio_run_interrupt_wrapper.py  cache.py  nitta_utils.py  string.py  tensorflow.py  tqdm_joblib.py
ml/synthesis/src/mlbackend/: __main__.py  app.py  backend_base_url_file.py  dtos.py  models_store.py
ml/synthesis/src/scripts/: compare_evaluations.py  crawl_data_by_tree_sampling.py  crawl_data_by_tree_sampling_many.py  evaluate_nitta_synthesis.py  evaluation.py  evalution.py  measure_data_crawling_speed.py  train_evaluate_in_ci.py  train_model.py
ml/synthesis/src/scripts/evaluation_configs/: ci.json  default.json  demo.json  full.json  new_ml_model.json
ml/synthesis/src/tests/: conftest.py  test_data_loading.py  test_data_processing.py  test_node_json_conversion.py  test_smoke.py  test_tensorflow_setup.py  test_utils.py
ml/synthesis/src/tests/data_crawling/: test_leaf_metrics_collector.py
ml/synthesis/src/tests/examples/: example_tree.py
ml/synthesis/src/tests/fixtures/: test_tree_root.py
resource/: index.html  timeline.html
rest-api/: rest_api.markdown
scripts/: evaluation.py  nitta_node.py
src/: Base.hs  Demo.hs  Demo_en.hs  FB.hs  FRAM.hs  NITTA.hs
template/: Makefile
test/: .stylish-haskell.yaml  Spec.hs
web/: .gitignore  README.md  biome.json  jest.config.js  package-lock.json  package.json  tsconfig.json
(+1032 files in other folders)
