name:                nitta
version:             0.0.0.1
synopsis:            CAD for reconfigurable real-time computation platform NITTA
-- description:
homepage:            https://nitta.io
license:             BSD3
license-file:        LICENSE
author:              Aleksandr Penskoi
maintainer:          aleksandr.penskoi@gmail.com
copyright:           2019 Aleksandr Penskoi
category:            hardware, library, program
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NITTA.Intermediate.Functions
                     , NITTA.Intermediate.Functions.Accum
                     , NITTA.Intermediate.Simulation
                     , NITTA.Intermediate.Types
                     , NITTA.Intermediate.Value
                     , NITTA.Intermediate.Variable
                     , NITTA.LuaFrontend
                     , NITTA.Model.MicroArchitecture
                     , NITTA.Model.Networks.Bus
                     , NITTA.Model.Networks.Types
                     , NITTA.Model.Problems.Binding
                     , NITTA.Model.Problems.Dataflow
                     , NITTA.Model.Problems.Endpoint
                     , NITTA.Model.Problems.Refactor
                     , NITTA.Model.Problems.Whole
                     , NITTA.Model.ProcessorUnits
                     , NITTA.Model.ProcessorUnits.Divider
                     , NITTA.Model.ProcessorUnits.Fram
                     , NITTA.Model.ProcessorUnits.IO.I2C
                     , NITTA.Model.ProcessorUnits.IO.SimpleIO
                     , NITTA.Model.ProcessorUnits.IO.SPI
                     , NITTA.Model.ProcessorUnits.Multiplier
                     , NITTA.Model.ProcessorUnits.Serial.Accum
                     , NITTA.Model.ProcessorUnits.Serial.Generic
                     , NITTA.Model.ProcessorUnits.Serial.Shift
                     , NITTA.Model.ProcessorUnits.Time
                     , NITTA.Model.TargetSystem
                     , NITTA.Model.Types
                     , NITTA.Project
                     , NITTA.Project.Implementation
                     , NITTA.Project.Parts.Icarus
                     , NITTA.Project.Parts.Quartus
                     , NITTA.Project.Parts.TargetSystem
                     , NITTA.Project.Parts.TestBench
                     , NITTA.Project.Parts.Utils
                     , NITTA.Project.Snippets
                     , NITTA.Project.Types
                     , NITTA.Project.Utils
                     , NITTA.Synthesis.Estimate
                     , NITTA.Synthesis.Method
                     , NITTA.Synthesis.Tree
                     , NITTA.Synthesis.Utils
                     , NITTA.UIBackend
                     , NITTA.UIBackend.Marshalling
                     , NITTA.UIBackend.REST
                     , NITTA.UIBackend.Timeline
                     , NITTA.UIBackend.VisJS
                     , NITTA.Utils
                     , NITTA.Utils.CodeFormat
                     , NITTA.Utils.ProcessDescription
  build-depends:       aeson
                     , array
                     , base
                     , containers
                     , data-default
                     , directory
                     , file-embed
                     , filepath
                     , hashable
                     , HStringTemplate
                     , http-api-data
                     , interpolatedstring-perl6
                     , intervals
                     , language-lua
                     , MissingH
                     , mtl
                     , process
                     , regex-compat
                     , safe
                     , servant
                     , servant-js
                     , servant-server
                     , split
                     , stm
                     , text
                     , transformers
                     , unordered-containers
                     , utility-ht
                     , wai-cors
                     , warp
  default-language:    Haskell2010

executable nitta-api-gen
  hs-source-dirs:      app
  main-is:             APIGen.hs
  build-depends:       aeson
                     , aeson-typescript
                     , base
                     , containers
                     , cmdargs
                     , directory
                     , filepath
                     , intervals
                     , MissingH
                     , nitta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable nitta
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , regex-compat
                     , cmdargs
                     , data-default
                     , interpolatedstring-perl6
                     , nitta
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite nitta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       NITTA.Test.BusNetwork
                     , NITTA.Test.FunctionSimulation
                     , NITTA.Test.Microarchitectures
                     , NITTA.Test.ProcessorUnits
                     , NITTA.Test.Refactor
                     , NITTA.Test.Types
                     , NITTA.Test.Locks
                     , NITTA.Test.LuaFrontend
                     , NITTA.Test.Utils
                     , NITTA.Test.CodeBlock
  build-depends:       atomic-primops
                     , base
                     , containers
                     , data-default
                     , file-embed
                     , filepath
                     , interpolatedstring-perl6
                     , MissingH
                     , nitta
                     , QuickCheck
                     , split
                     , regex-compat
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-th
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
