[project]
name = "nitta-ml-synthesis"
version = "1.0.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
src = ["ml/synthesis/src"]


[tool.vulture]
# Vulture is a tool that statically finds unreachable code or unused attributes in Python programs.
# Doing it without running the code in a language as dynamic as Python is non-trivial.
# Hence, Vulture has some notion of "confidence", but imho it's pretty weird, since obvious unused global functions are 
# given 60% confidence anyway just because they're functions (I guess?). Confidence depends on object's type, among other things.
min_confidence = 60
# 60% confidence threshold yields a lot of false positives, but 70% threshold yields a lot of false negatives.
# The only way to get a good result is to use a 60% with a whitelist, adding false positives to it as they appear:
#   1) Initialize a whitelist (once per project): 
#           /app/ml/synthesis$ vulture --make-whitelist > vulture_whitelist.txt
#
#           !!! CWD MUST BE `ml/synthesis` FOR THIS TOOL !!!
#
#   2) During development, run vulture and review the results. This config in pyproject.toml is picked up, so 
#      vulture_whitelist.txt is picked up too (it's specified in the `paths` below) and false positives are ignored:
#           /app/ml/synthesis$ vulture
#   3) When all the new true positives are fixed, add remaining false positives to the whitelist: 
#           /app/ml/synthesis$ vulture --make-whitelist >> vulture_whitelist.txt
#   4) Keep in mind that if some false positives tend to appear again (like FastAPI's `@app`-decorated functions),
#      they better be added to the ignore list below, not to the whitelist.
paths = ["src", "vulture_whitelist.txt"]
ignore_decorators = [
    # FastAPI
    "@app.get", "@app.post", "@app.put", "@app.delete", "@app.patch", "@app.exception_handler",
]
ignore_names = [
    # __exit__(...) method arguments
    "__exc_type", "__exc_value", "__traceback",
]
sort_by_size = true
